--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,27 @@
-<h1>Welcome#index</h1>
+<h1>Inventory Manager </h1>
 
 <div class="navBar">
-  <!--
+  <br>
 
-   -->
+  <a href="/orders/" >
+    <div class="button">
+        Orders
+    </div>
+  </a>
+    <br>
 
+  <a href="/orders/" >
+    <div class="button">
+        Inventory Items
+    </div>
+  </a>
+   <br>
+
+  <a href="/orders/" >
+    <div class="button">
+        Items in Use
+    </div>
+  </a>
 
 </div>
 
