--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,11 +29,23 @@ h1{
 .mainView{
     border: 1px solid black;
     position: absolute;
+    overflow: scroll;
     top: 12%;
     left: 20%;
     width: 75%;
     height: 80%;
 }
+
+
+thead th{
+    border-bottom: 1px solid black;
+    padding: 10px;
+}
+
+tbody tr{
+    border: 1px solid black;
+}
+
 .button {
     color: black;
     border: 2px solid;
