--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,1 +1,22 @@
-<h1>Orders Index</h1>
+<h1>Inventory Manager >> >> >> Orders Index</h1>
+
+<div class="navBar">
+
+  <br>
+  <%= link_to "Reagent List", controller:"welcome", action: "index" %>
+  <br>
+
+  <br>
+  <%= link_to "Orders", controller:"orders", action: "index" %>
+  <br>
+
+  <br>
+  <%= link_to "Other", controller:"orders", action: "index" %>
+  <br>
+
+</div>
+
+
+<div class="mainView">
+    <%= render @view %>
+</div>
