Continued from Fridays work

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,17 +2,7 @@
 
 <div class="navBar">
 
-  <br>
-  <%= link_to "Reagent List", controller:"welcome", action: "index" %>
-  <br>
-
-  <br>
-  <%= link_to "Orders", controller:"orders", action: "index" %>
-  <br>
-
-  <br>
-  <%= link_to "Other", controller:"orders", action: "index" %>
-  <br>
+  <%= render 'layouts/navbar' %>
 
 </div>
 
